# octant

./: .gitignore  Cargo.toml  README.md  build.sh  test.sh
octant-account/: Cargo.toml
octant-account/src/: into_auth.rs  into_octant.rs  lib.rs  login.rs  register.rs  style.rs
octant-build/: Cargo.toml
octant-client/: Cargo.toml
octant-client/src/: lib.rs  websocket.rs
octant-client/www/: index.html  index.js
octant-components/: Cargo.toml
octant-components/src/: lib.rs
octant-components/src/navbar/: mod.rs  style.rs
octant-cookies/: Cargo.toml
octant-cookies/src/: lib.rs
octant-database/: Cargo.toml
octant-database/src/: arc.rs  database.rs  de.rs  derive.rs  dict.rs  dirty.rs  field.rs  file.rs  forest.rs  hash_map.rs  hash_set.rs  id.rs  json.rs  lib.rs  lock.rs  map_combinator.rs  option.rs  option_combinator.rs  pair_combinator.rs  prim.rs  row.rs  seed.rs  seq_combinator.rs  ser.rs  stream_deserialize.rs  stream_deserializer.rs  stream_serialize.rs  stream_serializer.rs  struct_visitor.rs  table.rs  tack.rs  test.rs  tester.rs  tree.rs  unique_arc.rs
octant-database/src/de/: forest.rs  mod.rs  proxy.rs  tree.rs  update.rs
octant-database/src/de/seed/: map_seed.rs  mod.rs  struct_seed.rs
octant-database/src/object/: arc.rs  de.rs  dict.rs  hash.rs  map_combinator.rs  mod.rs  pair_combinator.rs  seq_combinator.rs  ser.rs  test.rs
octant-database/src/ser/: forest.rs  mod.rs  tree.rs  update.rs
octant-database/src/util/: arc_or_empty.rs  arc_or_weak.rs  deserialize_item.rs  deserialize_pair.rs  deserializer_by_mut.rs  deserializer_proxy.rs  field_key_seed.rs  identifier_seed.rs  map_seed.rs  mod.rs  option_seed.rs  pair_struct_seed.rs  seq_seed.rs  serializer_proxy.rs  tack.rs  unique_arc.rs
octant-database/src/value/: dict.rs  field.rs  mod.rs  prim.rs
octant-database/tests/: test.rs
octant-error/: Cargo.toml
octant-error/src/: lib.rs  wasm.rs
octant-executor/: Cargo.toml
octant-executor/src/: event_loop.rs  lib.rs  local_set.rs
octant-gui/: Cargo.toml
octant-gui-client/: Cargo.toml
octant-gui-client/src/: any_value.rs  credential.rs  credential_creation_options.rs  credential_promise.rs  credential_request_options.rs  credentials_container.rs  document.rs  element.rs  export.rs  global.rs  html_element.rs  html_form_element.rs  html_input_element.rs  import.rs  js_value.rs  lib.rs  navigator.rs  node.rs  object.rs  peer.rs  promise.rs  request.rs  request_init.rs  response.rs  text.rs  window.rs
octant-gui-core/: Cargo.toml
octant-gui-core/src/: allow_credentials.rs  allow_credentials_type.rs  any_value.rs  authenticator_assertion_response.rs  authenticator_attachment.rs  authenticator_attestation_response.rs  authenticator_response.rs  authenticator_selection_criteria.rs  authenticator_transport.rs  credential.rs  credential_creation_options.rs  credential_promise.rs  credential_request_options.rs  credentials_container.rs  document.rs  element.rs  error.rs  global.rs  handle.rs  html_form_element.rs  html_input_element.rs  lib.rs  navigator.rs  node.rs  object.rs  promise.rs  pub_key_cred_params.rs  public_key_credential.rs  public_key_credential_creation_options.rs  public_key_credential_request_options.rs  registration_extensions_client_outputs.rs  request.rs  request_init.rs  response.rs  value.rs  window.rs
octant-gui/src/: any_value.rs  builder.rs  credential.rs  credential_creation_options.rs  credential_promise.rs  credential_request_options.rs  credentials_container.rs  document.rs  element.rs  event_loop.rs  global.rs  handle.rs  html_element.rs  html_form_element.rs  html_input_element.rs  js_value.rs  lib.rs  navigator.rs  node.rs  object.rs  promise.rs  request.rs  request_init.rs  response.rs  runtime.rs  sink.rs  text.rs  window.rs
octant-metabuild/: Cargo.toml
octant-object/: Cargo.toml
octant-object-derive/: Cargo.toml
octant-runtime-client/: Cargo.toml  src
octant-runtime-server/: Cargo.toml
octant-runtime-server/src/: client_peer.rs  client_runtime.rs  completable.rs  define_sys_class.rs  define_sys_rpc.rs  delete.rs  error.rs  future_return.rs  handle.rs  immediate_return.rs  lib.rs  octant_future.rs  proto.rs  return_value.rs  server_peer.rs  server_runtime.rs
octant-scoreboard/: Cargo.toml
octant-scoreboard/src/: app.rs  css_scope.rs  login.rs  main.rs  navbar.rs  puzzle.rs  score.rs
octant-serde/: Cargo.toml
octant-serde/src/: context.rs  deserialize_with.rs  deserialize_with_impl.rs  encoded.rs  error.rs  format.rs  lib.rs  raw_encoded.rs  registry.rs
octant-serde/tests/: test.rs  test_derive.rs
octant-server/: Cargo.toml
octant-server/cert/: certificate.pem  csr.csr  key.pem
octant-server/src/: cookies.rs  lib.rs  session.rs  sink.rs
octant-web-sys/: Cargo.toml
octant-web-sys-client/: Cargo.toml  src
octant-web-sys-server/: Cargo.toml
octant-web-sys-server/src/: allow_credentials.rs  allow_credentials_type.rs  any_value.rs  attestation_conveyance_preference.rs  authentication_extensions_client_inputs.rs  authentication_extensions_client_outputs.rs  authenticator_assertion_response.rs  authenticator_attachment.rs  authenticator_attestation_response.rs  authenticator_response.rs  authenticator_selection_criteria.rs  authenticator_transport.rs  builder.rs  credential.rs  credential_creation_options.rs  credential_data.rs  credential_request_options.rs  credentials_container.rs  css_style_declaration.rs  css_style_sheet.rs  document.rs  dom_token_list.rs  element.rs  event_handler.rs  event_listener.rs  event_target.rs  export.rs  global.rs  history.rs  html_anchor_element.rs  html_br_element.rs  html_div_element.rs  html_element.rs  html_form_element.rs  html_head_element.rs  html_heading_element.rs  html_hr_element.rs  html_input_element.rs  html_label_element.rs  html_li_element.rs  (+26 more)
octant-web-sys-server/src/attributes/: autocomplete.rs  input_type.rs  mod.rs
octant-web-sys/client/: Cargo.toml
octant-web-sys/server/: Cargo.toml
octant-web-sys/src/: any_value.rs  global.rs  html_div_element.rs  js_value.rs  lib.rs  object.rs  text.rs  window.rs
(+36 files in other folders)
