[package]
name = "octant-account"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
url = "2.5.0"
tokio = "1.37.0"
log = "0.4.21"
webauthn-rs = "0.5.0"
webauthn-rs-core = "0.5.0"
octant-gui = {path="../octant-gui"}
atomic_refcell = "0.1.13"
octant-server ={path="../octant-server"}
octant-gui-core = {path="../octant-gui-core"}
