[package]
name = "octant-client"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
tokio = { version = "1.37.0", features = ["sync"] }
web-sys = { version = "0.3.69", features = [
    "CloseEvent",
    "ErrorEvent",
    "Event",
    "MessageEvent",
    "WebSocket",
    "BinaryType",
    "Blob",
    "Window",
    "Location",
    "console",
] }
log = "0.4.21"
js-sys = "0.3.69"
anyhow = "1.0.83"
wasm-bindgen-futures = "0.4.42"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
sync_wrapper = "1.0.1"
octant-gui-client = { workspace=true }
futures = "0.3.30"
serde_json = "1.0.117"
wasm-error = { workspace=true }
octant-gui-core = { workspace=true }
octant-web-sys-client = {workspace=true}