[package]
name = "octant-client"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
tokio = { workspace = true, features = ["sync","macros"] }
web-sys = { workspace = true, features = [
  "CloseEvent",
  "ErrorEvent",
  "Event",
  "MessageEvent",
  "WebSocket",
  "BinaryType",
  "Blob",
  "Window",
  "Location",
  "console",
] }
log = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-logger = { workspace = true }
console_error_panic_hook = { workspace = true }
sync_wrapper = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
octant-error = { workspace = true }
octant-runtime-client = { workspace = true }
octant-web-sys-client = { workspace = true }
octant-serde = { workspace = true }
safe-once = { workspace = true }
