[package]
name = "octant-database"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.199", features = ["derive", "unstable"] }
serde_assert = "0.7.1"
tokio = { version = "1.37.0", features = ["io-util", "rt", "macros","sync","time"] }
serde_json = "1.0.116"
anyhow = "1.0.82"
tmpdir = "1.0.0"
parking_lot = "0.12.2"
by_address = "1.2.1"
weak-table = "0.3.2"

[dev-dependencies]
serde-value = "0.7.0"
parking_lot = { version = "0.12.2", features = ["deadlock_detection"] }
pretty_assertions = "1.4.0"
