[package]
name = "octant-database"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = [
  "io-util",
  "rt",
  "macros",
  "sync",
  "time",
] }
tmpdir = { workspace = true }
parking_lot = { workspace = true }
by_address = { workspace = true }
weak-table = { workspace = true }
catalog = {workspace=true}
marshal = {workspace = true}
marshal-object = {workspace=true}
marshal-update = {workspace=true}
marshal-json = {workspace=true}
octant-error={workspace=true}
marshal-pointer = {workspace=true}
anyhow = {workspace=true}
marshal-bin = {workspace=true}

[dev-dependencies]
parking_lot = { workspace = true, features = ["deadlock_detection"] }
pretty_assertions = { workspace = true }
