[package]
name = "octant-error"
version = "0.1.0"
edition = "2021"

[dependencies]
sendable = { workspace = true ,optional = true}
wasm-bindgen = { workspace = true ,optional = true}
web-sys = { workspace = true, features = ["console"] ,optional = true}
log = { workspace = true }
anyhow = { workspace = true, features= ["backtrace"] }
serde = { workspace=true, features = ["derive"] }
backtrace = {workspace=true}
serde_json = {workspace=true}
tokio = {workspace=true, features=["sync"], optional=true}
warp={workspace=true, optional=true}
url = {workspace=true ,optional = true}
webauthn-rs-core = {workspace=true, optional=true}
marshal = {workspace=true}

[features]
wasm = ["sendable", "wasm-bindgen", "web-sys"]
