[package]
name = "octant-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt","macros"] }
futures = { workspace = true }
parking_lot = { workspace = true }
by_address = {workspace=true}
safe-once = {workspace=true}
slab = {workspace=true}