[package]
name = "octant-gui-client"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.28"
octant-gui-core = { path = "../octant-gui-core" }
octant-object = { path = "../octant-object" }
anyhow = "1.0.75"
log = "0.4.20"
wasm-bindgen = "0.2.87"
serde-wasm-bindgen = "0.6.3"
wasm-error = { path = "../wasm-error" }
web-sys = { version = "0.3.64", features = [
    "Document",
    "Window",
    "HtmlElement",
    "Text",
    "HtmlFormElement",
    "InputEvent",
    "HtmlCollection",
    "HtmlInputElement",
] }
atomic_refcell = "0.1.13"
prokio = "0.1.0"