[package]
name = "octant-gui-client"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
octant-gui-core = { path = "../octant-gui-core" }
octant-object = { path = "../octant-object" }
anyhow = "1.0.82"
log = "0.4.21"
wasm-bindgen = "0.2.92"
serde-wasm-bindgen = "0.6.5"
wasm-error = { path = "../wasm-error" }
web-sys = { version = "0.3.69", features = ["AuthenticatorAttestationResponse","Document", "Window", "HtmlElement", "Text", "HtmlFormElement", "InputEvent", "HtmlCollection", "HtmlInputElement", "HtmlAnchorElement", "History", "PopStateEvent", "Navigator", "CredentialsContainer", "CredentialCreationOptions", "PublicKeyCredentialCreationOptions", "PublicKeyCredentialRpEntity", "PublicKeyCredentialUserEntity", "PublicKeyCredential", "AuthenticatorResponse"] }
atomic_refcell = "0.1.13"
prokio = "0.1.0"
by_address = "1.2.1"
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3.69"
base64urlsafedata = "0.5.0"
