[package]
name = "octant-gui-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace=true, features = ["derive"] }
serde_json = {workspace=true}
base64urlsafedata = {workspace=true}
octant-serde ={workspace=true}
paste = {workspace=true}
octant-object = {workspace=true}
anyhow = {workspace=true}
catalog = {workspace=true}