[package]
name = "octant-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
atomic_refcell = "0.1.11"
futures = "0.3.28"
anyhow = "1.0.75"
octant-gui-core = { path = "../octant-gui-core" }
octant-object = { path = "../octant-object" }
serde_json = "1.0.105"
tokio = "1.36.0"
log = "0.4.20"
weak-table = "0.3.2"
type-map = "0.5.0"
by_address = "1.1.0"