[package]
name = "octant-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
atomic_refcell = "0.1.13"
futures = "0.3.30"
anyhow = "1.0.83"
octant-gui-core = { path = "../octant-gui-core" }
octant-object = { path = "../octant-object" }
octant-panic = { path = "../octant-panic" }
serde_json = "1.0.117"
tokio = "1.37.0"
log = "0.4.21"
weak-table = "0.3.2"
type-map = "0.5.0"
by_address = "1.2.1"
parking_lot = "0.12.2"
octant-executor = {path="../octant-executor"}
catalog = {path="../../catalog/catalog"}
serde = {workspace=true}
safe-once = {workspace=true}