[package]
name = "octant-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
atomic_refcell = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
octant-gui-core = { workspace = true }
octant-object = { workspace = true }
octant-panic = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
weak-table = { workspace = true }
type-map = { workspace = true }
by_address = { workspace = true }
parking_lot = { workspace = true }
octant-executor = { workspace = true }
catalog = { workspace = true }
serde = { workspace = true }
safe-once = { workspace = true }