cargo-features = ["metabuild"]
[package]
name = "octant-runtime-client"
version = "0.1.0"
edition = "2021"
metabuild = ["octant-metabuild"]

[dependencies]
serde = { workspace=true, features = ["derive"] }
octant-object = {workspace=true}
catalog = {workspace=true}
paste = {workspace=true}
octant-serde = {workspace=true}
atomic_refcell = {workspace=true}
tokio = {workspace=true, features=["sync"]}
safe-once = {workspace=true}
web-sys = {workspace=true,features=["console"]}
parking_lot = {workspace=true}
wasm-bindgen-futures = {workspace=true}
octant-reffed = {workspace=true}
cfg-if = {workspace=true}
octant-error = {workspace=true, features=["wasm"]}
octant-runtime-derive = {workspace=true}
marshal = {workspace=true}
marshal-bin = {workspace=true}
marshal-json = {workspace=true}
marshal-object = {workspace=true}
anyhow={workspace=true}
marshal-pointer = {workspace=true, features=["weak-table"]}


[build-dependencies]
octant-metabuild = { workspace = true }

[package.metadata.octant-metabuild]
side = "client"
shared-name = "octant-runtime"

