cargo-features = ["metabuild"]
[package]
name = "octant-runtime-server"
version = "0.1.0"
edition = "2021"
metabuild = ["octant-sys-build"]

[dependencies]
serde = { workspace=true, features = ["derive"] }
octant-object = {workspace=true}
anyhow = {workspace=true}
catalog = {workspace=true}
paste = {workspace=true}
octant-serde = {workspace=true}
weak-table ={workspace=true}
atomic_refcell = {workspace=true}
octant-executor = {workspace=true}
tokio = {workspace=true, features=["sync"]}
parking_lot = {workspace=true}
log = {workspace=true}
octant-reffed = {workspace=true}

[build-dependencies]
octant-sys-build = { workspace = true }

[package.metadata.octant-sys-build]
side = "server"
shared-name = "octant-runtime"
