cargo-features = ["metabuild"]
[package]
name = "octant-runtime-server"
version = "0.1.0"
edition = "2021"
metabuild = ["octant-metabuild"]

[dependencies]
serde = { workspace=true, features = ["derive"] }
octant-object = {workspace=true}
catalog = {workspace=true}
paste = {workspace=true}
octant-serde = {workspace=true}
weak-table ={workspace=true}
atomic_refcell = {workspace=true}
octant-executor = {workspace=true}
tokio = {workspace=true, features=["sync"]}
parking_lot = {workspace=true}
log = {workspace=true}
octant-reffed = {workspace=true}
cfg-if = {workspace=true}
octant-error = {workspace=true, features= ["tokio"]}
octant-runtime-derive = {workspace=true}
marshal = {workspace=true}
marshal-bin = {workspace=true}
marshal-json = {workspace=true}
marshal-object = {workspace=true}
anyhow = {workspace=true}
marshal-pointer = {workspace=true, features=["weak-table"]}
safe-once-async = {workspace = true}

[build-dependencies]
octant-metabuild = { workspace = true }

[package.metadata.octant-metabuild]
side = "server"
shared-name = "octant-runtime"
