[package]
name = "octant-scoreboard"
version = "0.1.0"
edition = "2021"

[dependencies]
octant-server = { path = "../octant-server" }
octant-panic = { path = "../octant-panic" }
simple_logger = "4.3.3"
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "macros"] }
octant-gui = { path = "../octant-gui" }
octant-gui-core = { path = "../octant-gui-core" }
anyhow = "1.0.75"
atomic_refcell = "0.1.13"