[package]
name = "octant-serde"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = { workspace = true }
catalog = { workspace = true }
serde = { workspace = true, features = ["derive"] }
type-map = { workspace = true }
anyhow = {workspace=true}
octant-serde-derive = {workspace=true}
paste = {workspace=true}
octant-reffed = {workspace=true}
octant-error ={workspace=true}