[package]
name = "octant-server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true, features = ["derive"] }
warp = { workspace = true, features = ["tls"] }
futures = { workspace = true }
log = { workspace = true }
octant-runtime-server = {workspace=true}
serde_json = { workspace = true }
tokio = { workspace = true ,features = ["macros"]}
memo-map = { workspace = true }
atomic_refcell = { workspace = true }
url = { workspace = true }
octant-executor = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
weak-table = { workspace = true }
itertools = { workspace = true }
octant-web-sys-server = { workspace = true }
octant-serde = {workspace=true}
octant-reffed = {workspace=true}
octant-error = {workspace=true,features=["warp","url"]}
marshal-json = {workspace=true}
marshal-bin = {workspace=true}
octant-database = {workspace = true}
