cargo-features = ["metabuild"]

[package]
name = "octant-web-sys-client"
version = "0.1.0"
edition = "2021"
metabuild = ["octant-sys-build"]

[dependencies]
octant-gui-core = {workspace=true}
octant-gui-client = {workspace=true}
octant-serde = {workspace=true}
serde = { version = "1.0.201", features = ["derive"] }
anyhow = "1.0.83"
catalog = {workspace= true}
wasm-error = {workspace=true}
log = "0.4.21"
octant-object = {workspace=true}
web-sys = {workspace=true, features=["HtmlDivElement"]}
wasm-bindgen = {workspace=true}
js-sys = {workspace=true}
safe-once = {workspace=true}

[build-dependencies]
octant-sys-build = {workspace=true}

[package.metadata.octant-sys-build]
side = "client"
shared-name = "octant-web-sys"