cargo-features = ["metabuild"]

[package]
name = "octant-web-sys-client"
version = "0.1.0"
edition = "2021"
metabuild = ["octant-sys-build"]

[dependencies]
octant-runtime-client = {workspace=true}
octant-serde = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
catalog = { workspace = true }
octant-error = { workspace = true }
log = { workspace = true }
octant-object = { workspace = true }
web-sys = { workspace = true, features = ["HtmlDivElement",  "Location",
    "Response",
    "Request",
    "RequestInit",
    "AuthenticatorAssertionResponse",
    "PublicKeyCredentialRequestOptions",
    "CredentialRequestOptions",
    "AuthenticatorAttestationResponse",
    "Document",
    "Window",
    "HtmlElement",
    "Text",
    "HtmlFormElement",
    "InputEvent",
    "HtmlCollection",
    "HtmlInputElement",
    "HtmlAnchorElement",
    "History",
    "PopStateEvent",
    "Navigator",
    "CredentialsContainer",
    "CredentialCreationOptions",
    "PublicKeyCredentialCreationOptions",
    "PublicKeyCredentialRpEntity",
    "PublicKeyCredentialUserEntity",
    "PublicKeyCredential",
    "AuthenticatorResponse",
    "AuthenticatorSelectionCriteria",
    "AttestationConveyancePreference",
    "AuthenticationExtensionsClientInputs",
    "AuthenticatorAttachment",
    "UserVerificationRequirement",] }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
safe-once = { workspace = true }
base64urlsafedata = { workspace = true }
octant-reffed = {workspace = true}
futures = { workspace=true}
wasm-bindgen-futures = {workspace=true}
by_address = {workspace=true}

[build-dependencies]
octant-sys-build = { workspace = true }

[package.metadata.octant-sys-build]
side = "client"
shared-name = "octant-web-sys"
