cargo-features = ["metabuild"]

[package]
name = "octant-web-sys-server"
version = "0.1.0"
edition = "2021"
metabuild = ["octant-metabuild"]

[dependencies]
octant-runtime-server = {workspace=true}
octant-serde = { workspace = true }
#serde = { workspace = true, features = ["derive", "rc"] }
catalog = { workspace = true }
octant-error = { workspace = true }
log = { workspace = true }
octant-object = { workspace = true }
safe-once = { workspace = true }
base64urlsafedata = { workspace = true }
octant-reffed = {workspace=true}
futures = {workspace=true}
parking_lot = {workspace=true}
by_address = {workspace=true}
marshal = {workspace=true,features = ["base64urlsafedata"]}
marshal-object = {workspace=true}
marshal-pointer = {workspace=true}
safe-once-async = {workspace=true}

[build-dependencies]
octant-metabuild = { workspace = true }

[package.metadata.octant-metabuild]
side = "server"
shared-name = "octant-web-sys"
