cargo-features = ["metabuild"]

[package]
name = "octant-web-sys-server"
version = "0.1.0"
edition = "2021"
metabuild = ["octant-sys-build"]

[lib]
path = "../src/lib.rs"

[dependencies]
octant-gui-core = {workspace=true}
octant-gui = {workspace=true }
octant-serde = {workspace=true}
serde = { version = "1.0.201", features = ["derive"] }
anyhow = "1.0.83"
catalog = {workspace=true}
wasm-error = {workspace=true}
log = "0.4.21"
octant-object = {workspace=true}
safe-once = {workspace=true}

[build-dependencies]
octant-sys-build = {workspace=true}

[package.metadata.octant-sys-build]
side="server"
shared-name = "octant-web-sys"